--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    
+    - name: Initialize Git submodules
+      run: |
+        git submodule update --init --recursive
 
     - name: Set up build environment
       run: |
