--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
     - name: Initialize Git submodules
       run: |
         git submodule update --init --recursive
+    
+    - name: Install CMake < 3.30
+      run: |
+        wget -qO- https://github.com/Kitware/CMake/releases/download/v3.29.6/cmake-3.29.6-linux-x86_64.sh | sudo bash
 
     - name: Set up build environment
       run: |
